[project]
name = "preptrack"
version = "0.1.0"
description = "Adaptive UPSC Study Planner - deterministic engine and data models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.35.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["preptrack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring DynamoDB Local (deselect with '-m \"not integration\"')",
]
